# cochl_interview_251119

./: .gitignore  README.md
.github/workflows/: build-libtorch.yml  build-tflite.yml  build-tvm.yml
api/: CMakeLists.txt
api/include/: cochl_api.h  cochl_api_c.h
api/include/error/: api_error.h
api/include/runtime/: custom_runtime.h  i_inference_backend.h  i_runtime.h  runtime_manager.h  tf_runtime.h  torch_runtime.h  tvm_runtime.h
api/include/utils/: util_img.h
api/python/tvm_ext/: resnet_build.py  resnet_schedule.py  tf_export.py
api/src/: cochl_api.cpp  cochl_api_c.cpp
api/src/error/: api_error.cpp
api/src/runtime/: custom_runtime.cpp  runtime_manager.cpp  tf_runtime.cpp  torch_runtime.cpp  tvm_runtime.cpp
api/test/: CMakeLists.txt  api_test.cpp  runtime_test.cpp
docker/: Dockerfile.linux-amd64  Dockerfile.linux-arm64
main/: CMakeLists.txt  main.cpp
models/: tflite_resnet50.py  torch_resnet50.py
script/: download-releases-amd64.sh  download-releases-arm64.sh  run-amd64.sh  run-arm64.sh  set-tvm-env.sh
sdk/: CMakeLists.txt  README.md
sdk/examples/: simple_inference.cpp
sdk/include/: inference_engine.h  profiler.h  thread_pool.h
sdk/include/api/: cochl_api.h  cochl_api_loader.h
sdk/include/error/: sdk_error.h
sdk/include/profiler/: system_monitor.h
sdk/src/: inference_engine.cpp  profiler.cpp  thread_pool.cpp
sdk/src/api/: cochl_api.cpp  cochl_api_loader.cpp
sdk/src/error/: sdk_error.cpp
sdk/src/kernel/: system_monitor.cpp
sdk/src/profiler/: system_monitor.cpp
sdk/test/: sdk_api_test.cpp  test_tvm_metaschedule.cpp
